--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,5 +1,5 @@
 <LinearLayout
-    xmlns:font="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,45 +8,51 @@
 
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:background="@color/color_primary"
         android:gravity="left|bottom"
-        android:orientation="vertical"
-        android:weightSum="6"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
 
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="0dp"
-                android:layout_weight="3"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_pic"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="30dp"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/secondary_text"
                 android:src="@drawable/profile_placeholder"/>
 
                 <TextView
+                    android:id="@+id/user_name_text"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="15dp"
+                    android:layout_below="@id/profile_pic"
                     android:text="Ahmed Ragab"
                     android:textStyle="bold"
                     android:textSize="@dimen/abc_text_size_body_1_material"
                     android:textColor="@color/primary_text_light"/>
 
                 <TextView
+                    android:id="@+id/user_email_text"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="15dp"
+                    android:layout_below="@id/user_name_text"
                     android:text="ahmed_ragab7@hotmail.com"
                     android:textSize="@dimen/abc_text_size_small_material"
                     android:textColor="@color/primary_text_light"/>
-    </LinearLayout>
+    </RelativeLayout>
 
 <ListView  android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="3"
+    android:layout_height="fill_parent"
     android:id="@+id/navigation_drawer_list" android:choiceMode="singleChoice"
     android:divider="@android:color/transparent" android:dividerHeight="0dp"
     android:paddingTop="8dp"
