Add submit event

--- a/app/src/main/res/layout/navigation_list_item.xml
+++ b/app/src/main/res/layout/navigation_list_item.xml
@@ -3,8 +3,8 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="start"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp">
+    android:paddingTop="13dp"
+    android:paddingBottom="13dp">
 
     <ImageView
         android:id="@+id/navigation_list_action_icon"
@@ -20,6 +20,5 @@
         android:layout_width="wrap_content"
         android:layout_toRightOf="@id/navigation_list_action_icon"
         android:layout_height="wrap_content"
-        android:textColor="#87000000"
-        android:textSize="@dimen/abc_text_size_medium_material"/>
+        android:textSize="16sp"/>
 </RelativeLayout>
