--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="color_primary">#37474F</color>
     <color name="color_primaryDark">#37474F</color>
-    <color name="color_accent">#009688</color>
-    <color name="color_accent_50">#75009688</color>
+    <color name="color_primaryLight">#90A4AE</color>
+    <color name="color_accent">#0091EA</color>
+    <color name="color_accent_50">#750091EA</color>
     <color name="primary_text_light">#FFFFFF</color>
     <color name="secondary_text_light">#70FFFFFF</color>
     <color name="hint_text_light">#50FFFFFF</color>
