--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -18,7 +18,7 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_pic"
+                android:id="@+id/nav_profile_pic"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="30dp"
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="15dp"
-                    android:layout_below="@id/profile_pic"
+                    android:layout_below="@id/nav_profile_pic"
                     android:text="Ahmed Ragab"
                     android:textStyle="bold"
                     android:textSize="@dimen/abc_text_size_body_1_material"
